<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/item_detail_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:id="@+id/top_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacex_margin_small"
        android:layout_marginBottom="@dimen/spacex_margin_small"
        android:layout_marginStart="@dimen/spacex_margin_small"
        android:layout_marginEnd="@dimen/spacex_margin_small"
        app:cardCornerRadius="@dimen/spacex_margin_small"
        app:cardElevation="@dimen/spacex_card_elevation_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/spacex_margin_small"
          android:layout_gravity="center"
          android:background="#E0F7FA"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/launchThumbnail"
            android:layout_width="@dimen/spacex_detail_thumbnail_size"
            android:layout_height="@dimen/spacex_detail_thumbnail_size"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            tools:srcCompat="@drawable/ic_rocket_grey_24dp"
            android:contentDescription="@string/mission_patch_image" />

        <TextView
            android:id="@+id/missionName"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacex_detail_top_margin"
            android:layout_marginBottom="@dimen/spacex_detail_top_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/spacex_text_size_large"
            tools:text="@string/mission_name_placeholder" />

        <TextView
            android:id="@+id/missionDescription"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacex_detail_top_margin"
            android:layout_marginStart="@dimen/spacex_detail_top_margin"
            android:layout_marginEnd="@dimen/spacex_detail_top_margin"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/spacex_text_size_medium"
            tools:text="@string/mission_description_placeholder" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mid_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacex_margin_small"
        android:layout_marginBottom="@dimen/spacex_margin_small"
        android:layout_marginStart="@dimen/spacex_margin_small"
        android:layout_marginEnd="@dimen/spacex_margin_small"
        app:cardBackgroundColor="@color/primary_background"
        app:cardCornerRadius="@dimen/spacex_margin_small"
        app:cardElevation="@dimen/spacex_margin_very_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_card_view">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="@dimen/spacex_margin_large"
          android:orientation="vertical">

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacex_margin_small"
            android:drawablePadding="10dp"
            android:textSize="@dimen/spacex_text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label"
            tools:text="@string/location_text_placeholder"
            app:drawableStartCompat="@drawable/ic_rocket_grey_24dp" />

        <TextView
            android:id="@+id/locationTextLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacex_margin_small"
            android:drawablePadding="10dp"
            android:textSize="@dimen/spacex_text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationText"
            tools:text="@string/location_text_long_placeholder"
            app:drawableStartCompat="@drawable/ic_rocket_grey_24dp" />

        <TextView
            android:id="@+id/label"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/flight_details"
            android:textColor="@android:color/black"
            android:textSize="@dimen/spacex_text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rocketName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacex_margin_small"
            android:drawablePadding="10dp"
            android:textSize="@dimen/spacex_text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTextLong"
            tools:text="Falcon 1"
            app:drawableStartCompat="@drawable/ic_rocket_grey_24dp" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>